--- a/src/scss/auto-imports/_basic/variables.scss
+++ b/src/scss/auto-imports/_basic/variables.scss
@@ -10,6 +10,7 @@ $z-index-overlay-buttons: 2;
 $z-index-gallery-image-buttons: 2;
 $z-index-gallery-header-sticky: 3;
 $z-index-overlay: 3;
+$z-index-meta-pre: 4;
 $z-index-overlay-box: 4;
 
 $default-border-radius: 5px;
